Permite mais de um setor por categoria
